push all code files for the course exercise

--- a/Pandas Data Analysis/SF salary exercise-pandas_analysis.ipynb
+++ b/Pandas Data Analysis/SF salary exercise-pandas_analysis.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +112,7 @@
        "0  2011    NaN  San Francisco     NaN  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -270,7 +270,7 @@
        "4  2011    NaN  San Francisco     NaN  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +340,7 @@
        "66325.44884050643"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -367,7 +367,7 @@
        "245131.88"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -380,12 +380,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "What is the job title of JOSEPH DRISCOLL ? Note: Use all caps, otherwise you may get an answer that doesn't match up (there is also a lowercase Joseph Driscoll)"
+    "What is the job title of JOSEPH DRISCOLL ? "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -395,7 +395,7 @@
        "Name: JobTitle, dtype: object"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -413,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -423,7 +423,7 @@
        "Name: TotalPayBenefits, dtype: float64"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -441,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -451,7 +451,7 @@
        "Name: EmployeeName, dtype: object"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -464,12 +464,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "What is the name of lowest paid person (including benefits)? Do you notice something strange about how much he or she is paid?"
+    "What is the name of lowest paid person (including benefits)?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -479,7 +479,7 @@
        "Name: EmployeeName, dtype: object"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -490,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -561,7 +561,7 @@
        "148653  San Francisco     NaN  "
       ]
      },
-     "execution_count": 38,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -574,13 +574,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "I noticed he is not been paid any salary at all but is in fact being deducted under other pay\n",
+    "notice he is not been paid any salary at all but is in fact being deducted under other pay and total pay\n",
     "@argmin is an advanced way of doing this"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -708,7 +708,7 @@
        "148653    NaN  San Francisco     NaN  "
       ]
      },
-     "execution_count": 44,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -721,12 +721,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "What was the average (mean) BasePay of all employees per year? (2011-2014) ? ...couldnt solve yet"
+    "5 people are affected"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "What was the average (mean) BasePay of all employees per year? (2011-2014) ?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -740,7 +747,7 @@
        "Name: BasePay, dtype: float64"
       ]
      },
-     "execution_count": 161,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -758,7 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -767,14 +774,14 @@
        "2159"
       ]
      },
-     "execution_count": 163,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "sal['JobTitle'].value_counts().count()\n",
-    "sal['JobTitle'].nunique()"
+    "# or sal['JobTitle'].nunique()"
    ]
   },
   {
@@ -786,7 +793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -800,7 +807,7 @@
        "Name: JobTitle, dtype: int64"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -813,12 +820,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "How many Job Titles were represented by only one person in 2013? (e.g. Job Titles with only one occurence in 2013?)...can't solve yet"
+    "How many Job Titles were represented by only one person in 2013?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -827,7 +834,7 @@
        "202"
       ]
      },
-     "execution_count": 170,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -840,12 +847,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "How many people have the word Chief in their job title? (This is pretty tricky)"
+    "How many people have the word Chief in their job title? "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -854,7 +861,7 @@
        "477"
       ]
      },
-     "execution_count": 175,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -874,12 +881,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Bonus: Is there a correlation between length of the Job Title string and Salary?"
+    "correlation between length of the Job Title string and Salary?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -888,59 +895,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>TitleLength</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>TitleLength</th>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "             TitleLength\n",
-       "TitleLength          1.0"
-      ]
-     },
-     "execution_count": 179,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "sal[['TitleLength','JobTitle']].corr()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -989,13 +944,20 @@
        "TotalPayBenefits    -0.036878          1.000000"
       ]
      },
-     "execution_count": 180,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "sal[['TitleLength','TotalPayBenefits']].corr()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Not correlated"
    ]
   },
   {
